# embeau-backend

./: .env.example  .gitignore  README.md  ecosystem.config.js  main.py  pyproject.toml
scripts/: run.sh  run_server.sh
src/embeau_api/: __init__.py  config.py  deps.py  main.py
src/embeau_api/api/v1/: __init__.py  auth.py  color.py  emotion.py  feedback.py  recommendation.py  report.py  router.py
src/embeau_api/core/: exceptions.py  logging.py  security.py
src/embeau_api/db/: init_db.py  session.py
src/embeau_api/ml/: __init__.py  model_loader.py
src/embeau_api/models/: __init__.py  color.py  emotion.py  feedback.py  log.py  recommendation.py  user.py
src/embeau_api/schemas/: __init__.py  auth.py  base.py  color.py  emotion.py  feedback.py  recommendation.py
src/embeau_api/services/: __init__.py  auth.py  color_analyzer.py  emotion_analyzer.py  feedback.py  recommendation.py  report.py
